Resolve #379: Split screen for details page (#405)
* Enable scrollbar in snippet container.
* Allow resizing snippet container.

--- a/mubench.reviewsite/css/style.css
+++ b/mubench.reviewsite/css/style.css
@@ -231,6 +231,13 @@ table.fw {width:100%;}
     list-style: decimal inside;
 }
 
+pre.prettyprint {
+    overflow: auto;
+    width: auto;
+    resize: vertical;
+    max-height: 1000px;
+}
+
 .misuse-tag {
     float: left;
     margin: 0 3px 3px 0;
